model Leito {
  id           Int            @id @default(autoincrement())
  numero_leito Int
  status       String
  observacoes  String?
  
  LeitoConsultas LeitoConsulta[]
} 