model Agendamento {
  id    Int                   @id @default(autoincrement())
  id_paciente         Int
  id_funcionario      String
  dt_agendamento      DateTime @db.Date
  dt_hora_agendamento Int   
  tipo_agendamento    TipoAgendamentoEnum
  status_agendamento  StatusAgendamentoEnum
  observacoes         String?
  dt_chegada          DateTime?
  Paciente            Paciente              @relation(fields: [id_paciente], references: [id])
  Usuario             User                  @relation(fields: [id_funcionario], references: [id])
  Consulta          Consulta?
}

enum StatusAgendamentoEnum {
  Agendado
  Confirmado
  Realizado
  Cancelado
  Reagendado 
}

enum TipoAgendamentoEnum {
  Consulta
  Exame
  Procedimento
}