model Conduta {
  id                Int      @id @default(autoincrement())
  id_consulta       Int
  id_funcionario    String
  dt_conduta        DateTime @default(now())
  conduta           String   @db.VarChar(5000)

  Consulta        Consulta @relation(fields: [id_consulta], references: [id])
  User              User       @relation(fields: [id_funcionario], references: [id])

  @@map("conduta")
}
