model Paciente {
  id                 Int      @id @default(autoincrement())
  nome_paciente      String   @db.VarChar(100)
  dt_nascimento      DateTime @db.Date
  sexo               Sexo
  estado_civil       EstadoCivil
  endereco           String   @db.VarChar(50)
  cpf                String   @unique @db.VarChar(11)
  cpf_acompanhante   String   @db.VarChar(11)

  agendamentos       Agendamento[]
}

enum Sexo {
  M // Masculino
  F // Feminino
  O // Outro
}

enum EstadoCivil {
  S // Solteiro(a)
  C // Casado(a)
  D // Divorciado(a)
  V // Viúvo(a)
}