model Role {
  id          String @id @default(uuid())
  name        String @unique
  description String
  users       UserToRole[]
  permissions RoleToPermission[]
  
  @@map("role")
}