Table Paciente {
  id_paciente int [pk] 
  nome_paciente varchar(100)
  dt_nascimento date
  sexo varchar(20)
  estado_civil varchar(20)
  endereco varchar(50)
  cpf varchar(11) [unique] 
  cpf_acompanhante varchar(11) [unique]
}

Table Usuario {
  id_usuario int [pk]
  nome_usuario varchar(100)
  email varchar(400) [unique]
  contato varchar(20)
  senha varchar(255)
  status status_enum
  especialidade varchar(50)
  conselho cargo_enum
  registro_profissional varchar(20)
  cpf varchar(11) [unique]
}

Table Usuario_Role {
  id_usuario int [ref: > Usuario.id_usuario]
  id_role int [ref: > Role.id_role]

  Indexes {
    (id_usuario, id_role) [pk] 
  }
}


Enum status_enum {
  Ativo
  Inativo
}
Table Agendamento {
  id_agendamento int [pk]
  id_paciente int [ref: > Paciente.id_paciente]
  id_funcionario int [ref: > Usuario.id_usuario]
  data_agendamento date
  hora_agendamento time
  tipo_agendamento tipo_agendamento_enum
  status_agendamento status_agendamento_enum
  observacoes text
}
Table Role {
  id_role int [pk]
  nome_role varchar(100)
}

Table Permissao {
  id_permissao int [pk]
  nome_permissao varchar(100)  
  descricao text  
}

Table Role_Permissao {
  id_role int [ref: > Role.id_role]
  id_permissao int [ref: > Permissao.id_permissao]

  Indexes {
    (id_perfil, id_permissao) [pk] 
  }
}


Table AltaMedica {
  id_alta int [pk]
  id_consulta int [ref: > Consulta.id_consulta]
  id_medico int [ref: > Usuario.id_usuario]
  dt_alta datetime
  tipo_alta enum_tipo_alta_enum
  observacoes text
}

//Table Disponibilidade {
 // id_disponibilidade int [pk]
  //id_usuario int [ref: > Usuario.id_usuario]
  //data date  
  //hora time
  //status enum_disponibilidade  
//}



Table Chamados {
  id_chamado int [pk]
  id_usuario int [ref: > Usuario.id_usuario]
  tipo_problema varchar(255)
  descricao text
  status enum_status_chamado_enum
  dt_abertura datetime
  dt_resolucao datetime
}

Table Auditoria {
  id_auditoria int [pk]
  id_usuario int [ref: > Usuario.id_usuario]
  acao varchar(255)
  descricao text
  dt_registro datetime
}

Table Consulta {
  id_consulta int [pk]
  id_agendamento int [ref: > Agendamento.id_agendamento]
  procedimento tipo_procedimento_enum
  dt_entrada datetime
  dt_saida datetime
  status varchar(50)
  observacoes text
}


Table Prescricao {
  id_prescricao int [pk]
  id_consulta int [ref: > Consulta.id_consulta]
  dt_prescricao date
  dieta varchar(500) //optional
  decubito varchar(500)//optional
  cuidados_especiais varchar(500)//optional
  fisioterapia varchar(500)//optional
  balanco_hidrico boolean//optional
  observacoes varchar(5000)
}

Table conduta {
  id_conduta int [pk]
  id_prescricao int [ref: > Prescricao.id_prescricao] 
  id_funcionario int [ref: > Usuario.id_usuario]
  dt_conduta datetime //default now notnull
  conduta varchar(5000) //notnull
}

Table Administracao_conduta{
  id_administracao_conduta int [pk]
  id_conduta int [ref: > conduta.id_conduta]
  id_funcionario int [ref: > Usuario.id_usuario]
  dt_administracao datetime
  hora_administracao time
  observacoes varchar(5000)
}

Table Triagem {
  id_triagem int [pk]
  id_consulta int [ref: > Consulta.id_consulta]
  id_funcionario int [ref: > Usuario.id_usuario]
  dt_triagem datetime
  peso float
  altura float
  pressao_arterial varchar(50)
  temperatura float
  saturacao_oxigenio int
  glicemia int
  classificacao_risco varchar(50)
  observacoes varchar(5000)
}



Table Exames {
  id_exame int [pk]
  id_consulta int [ref: > Consulta.id_consulta]
  id_funcionario int [ref: > Usuario.id_usuario]
  tipo_do_exame varchar(500)
  resultado varchar(1000)
  dt_exame date
  profissional_responsavel varchar(100)
  status varchar(50)
}

Table Evolucao_Medica {
  id_evolucao int [pk]
  id_consulta int [ref: > Consulta.id_consulta]
  id_funcionario int [ref: > Usuario.id_usuario]
  dt_evolucao datetime
  sintomas varchar(500)
  observacoes varchar(5000)
}

Table Anamnese {
  id_anamnese int [pk]
  id_consulta int [ref: > Consulta.id_consulta]
  id_funcionario int [ref: > Usuario.id_usuario]
  cid varchar(10)
  queixa_principal varchar(5000)
  historia_doenca_atual varchar(5000)
  antecedentes_pessoais varchar(5000)
  antecedentes_familiares varchar(5000)
  habitos_vida varchar(5000)
  medicamentos_em_uso varchar(5000)
  alergias varchar(5000)
  cirurgias_previas varchar(5000)
  observacoes varchar(5000)
}
Table Leito {
  id_leito int [pk]
  numero_leito int
  status varchar(50)
  observacoes varchar(5000)
}

Table LeitoConsulta{
  id_leito_consulta int [pk]
  id_consulta int [ref: > Consulta.id_consulta]
  id_leito int [ref: > Leito.id_leito]
  dt_entrada datetime
  dt_saida datetime
}
Table Exame_Fisico {
  id_exame_fisico int [pk]
  id_anamnese int [ref: > Anamnese.id_anamnese] // Add foreign key to Anamnese
  id_evolucao int [ref: > Evolucao_Medica.id_evolucao] // Add foreign key to Evolucao_Medica
  frequencia_cardiaca int
  frequencia_respiratoria int
  pressao_arterial varchar(50)
  saturacao_oxigenio int
  ausculta_cardiaca varchar(5000)
  ausculta_pulmonar varchar(5000)
  ausculta_abdominal varchar(5000)
  oroscopia varchar(5000)
  genitalia varchar(5000)
  sistema_nervoso varchar(5000)
  temperatura int
  observacoes varchar(5000)
}


Enum tipo_procedimento_enum {
  Internacao
  Consulta
  ProntoSocorro
}

Enum cargo_enum {
  CRM
  COREN
  CRO
  CRP
}

Enum nome_perfil_enum {
  Administrador
  Medico
  Enfermeiro
  Recepcionista
}

Enum tipo_alta_enum {
  Com_Atestado
  Sem_Atestado
  Transferencia
  Evasao
  Outro
}

Enum enum_disponibilidade {
  Disponivel
  Ocupado
  Em_Pausa
}

Enum status_chamado_enum {
  Aberto
  Em_Andamento
  Resolvido
  Fechado
}

Enum perfil_enum {
  Administrador
  Profissional_de_Saude
  Recepcionista
}


Enum prioridade_enum {
  Baixa
  Media
  Alta
  Emergencia
}

Enum status_agendamento_enum {
  Agendado
  Confirmado
  Realizado
  Cancelado
  Reagendado 
}

Enum tipo_agendamento_enum {
  Consulta
  Exame
  Procedimento
}
